# hexl-ntt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
documents/: poly_mult_ntt.tex  tfhe.tex
documents/NTT/: techrep.cls  tfhe.tex
include/: aligned-allocator.hpp  avx512-util.hpp  check.hpp  clang.hpp  compiler.hpp  cpu-features.hpp  custom_assert.h  defines.hpp  file.h  fwd-ntt-avx512.hpp  gcc.hpp  hexl_ntt.hpp  inv-ntt-avx512.hpp  logging.hpp  msvc.hpp  mult_fft.hpp  mult_poly.hpp  ntt-avx512-util.hpp  ntt-default.hpp  ntt-internal.hpp  ntt.hpp  number-theory.hpp  types.hpp  util-internal.hpp  utils.hpp
python/: README.md
python/lwe/: example.py
python/src/: mod.py
src/: CMakeLists.txt  file.cpp  fwd-ntt-avx512.cpp  hexl_ntt.cpp  inv-ntt-avx512.cpp  mult_fft.cpp  mult_poly.cpp  ntt-internal.cpp  ntt-radix-2.cpp  ntt-radix-4.cpp  ntt.cpp  utils.cpp
test/: CMakeLists.txt  hexl_ntt_basic_test.cpp  hexl_ntt_mult_poly_test.cpp  mult_fft_test.cpp  mult_poly_hexl_test.cpp  mult_poly_test.cpp  ntt_test.cpp  torus32dist.txt
thirdparties/spqlios/: fft_processor_spqlios.cpp  fft_processor_spqlios.h
